[package]
name = "db_service"
version = "0.2.0"
edition = "2021"

[dependencies]
sqlx= {version = "0.7.4", features = ["sqlite", "runtime-tokio"] }
serde = {version = "1.0.198", features = ["derive"]}
serde_json = "1.0.116"
uuid = {version = "1.3.0", features = ["v7"]}
logger = {git = "https://github.com/P40b0s/logger.git", branch = "main"}
utilites = {git = "https://github.com/P40b0s/help_utilites.git", package = "utilites"}
thiserror = "*"

[dev-dependencies]
tokio= {version = "1.37.0", features = ["macros", "rt", "rt-multi-thread"] }
tokio-test= {version ="0.4.4"}